--- a/styles.css
+++ b/styles.css
@@ -62,4 +62,78 @@ img{
     grid-template-columns: 300px 300px;
     gap: 1.5em;
     
+  }.container{
+    display:grid;
+    width:1200px;
+    height:300px;
+    justify-content: center;
+    grid-template-columns: 300px 300px 300px;
+    gap:1.5em;
+padding-left:200px;
+line-height: 1.5rem;
+color:aliceblue
+
   }
+  .inner img{
+    width: 30px;
+    height: 30px;
+  }
+  .inner h3{
+    font-size: larger;
+    font-family: Arial, Helvetica, sans-serif;
+    padding:20px 10px;
+  }
+  .inner label{
+    padding-top:30px;
+    font-size: larger;
+    text-decoration: underline;
+    line-height: 1.5rem;
+    font-weight: 300px;
+    
+  }
+  .green{
+    background-color: rgb(4, 108, 74);
+border-radius: 15px;
+
+  }
+  .blue{
+    background: rgb(35, 74, 104);
+    border-radius: 20px;
+  }
+  .purple{
+    background: rgb(3, 3, 19);
+    border-radius: 20px;
+  }
+  .inner p{
+    font-size: large;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    padding:40px 40px;
+  }
+  .side p{
+    color: aquamarine;
+    width:300px;
+    height:300px;
+    background-color: bisque;
+    margin-left: 200px;
+    font-weight:bolder;
+    padding:20px 20px;
+    font-size:30px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+.containerlogo{
+    display:grid;
+    padding:40px 40px;
+    grid-template-columns: 100px 100px 100px;
+    float:right;
+    position: relative;
+    bottom:300px;
+    margin-right: 100px;
+    
+    
+}
+.logo img{
+    width: 50px;
+    height: 40px;
+    justify-content: space-between;
+}
