--- a/styles.css
+++ b/styles.css
@@ -132,8 +132,8 @@ border-radius: 15px;
     
 }
 .logo img{
-    width: 50px;
-    height: 40px;
+    width: 80px;
+    height: 30px;
     justify-content: space-between;
 }
 .close{
@@ -186,4 +186,70 @@ border-radius: 15px;
 top:-30px
     
    
+}
+.gridcontainer{
+    display:grid;
+    width:500px;
+    height:500px;
+    float:right;
+    position: relative;
+    bottom:500px;
+    grid-template-columns: 200px 200px;
+    gap: 1.5em;
+    
+
+}
+.gridcontainer img{
+    width:70px;
+    height:-5px;
+    padding-left:20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    
+}
+.white1{
+    background-color: azure;
+    width:210px;
+    height:230px
+}
+.gridcontainer h3{
+    display: flex;
+    justify-content: center;
+    font-size: x-large;
+    color: aquamarine;
+    padding: 10px;
+    text-align: center;
+}
+.gridcontainer p{
+    display:flex;
+    justify-content: center;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top:15px;
+    font-size: small;
+    
+}
+.heading{
+    padding-top:100px;
+}
+.heading h3{
+    display:block;
+    text-align: center;
+    font-size: xx-large;
+   float: right;
+   color: aquamarine;
+}  
+
+.heading p{
+    justify-content: center;
+    text-align:center;
+    display: block;
+    position:relative;
+    top: 90px;
+    left:390px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+    color:#747474;
+
 }
